fix : fixed responsiveness

--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -92,10 +92,10 @@
               </a>
             </li>
             <li class="nav-item">
-							<a class="nav-link" href="#community_partner">
-								Sponsors
-							</a>
-						</li>
+              <a class="nav-link" href="#community_partner">
+                Sponsors
+              </a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">
                 Contact
@@ -127,7 +127,7 @@
     <div class="col-md-1"></div>
 
     <div class="col-md-3">
-      <div style="float: left;margin-right: 5%;">
+      <div style="float: left;margin-right: 5%;" class="searchbar_div">
         <input style="border-radius: 3rem; padding: 10px;border-color: grey;width: 130%;" id="searchbar"
           onkeyup="search_blog()" type="text" name="search" placeholder='Search projects.....' />
       </div>
@@ -136,8 +136,7 @@
   <br>
 
   <div class="center">
-    <img
-      src="./assets/img/hack.jpg" >
+    <img src="./assets/img/hack.jpg" class="centered_img">
 
   </div>
 
@@ -148,8 +147,7 @@
     <div class="blog" data-aos="fade-up" data-aos-duration="1500">
 
       <div class="image">
-        <img
-          src="./assets/CodeIN.jpg" alt="CodeIN Community's Website">
+        <img src="./assets/CodeIN.jpg" alt="CodeIN Community's Website" class="project_card_img">
 
       </div>
       <div class="blog_content" id="content">
@@ -165,7 +163,8 @@
         <div class="description">
           So, here you go! Contribute to the Open Source Website of CodeIN Community 🤩 Excited?
         </div>
-        <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" class="read_btn" data-aos="fade-up">Go to Project</a>
+        <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" class="read_btn" data-aos="fade-up">Go
+          to Project</a>
       </div>
     </div>
 
@@ -178,8 +177,7 @@
     <div class="blog" data-aos="fade-up" data-aos-duration="1500">
 
       <div class="image">
-        <img
-          src="./assets/Library.png" alt="AEC Library">
+        <img src="./assets/Library.png" alt="AEC Library" class="project_card_img">
 
       </div>
       <div class="blog_content" id="content">
@@ -191,10 +189,12 @@
         <!--  </a>
  -->
         <div class="description">
-          This is an Open-Source Library Website in which you get Resources to learn different topics, Donate book section to donate your old books.
+          This is an Open-Source Library Website in which you get Resources to learn different topics, Donate book
+          section to donate your old books.
         </div>
 
-        <a href="https://github.com/SauravMukherjee44/Aec-Library-Website" class="read_btn" data-aos="fade-up">Go to Project</a>
+        <a href="https://github.com/SauravMukherjee44/Aec-Library-Website" class="read_btn" data-aos="fade-up">Go to
+          Project</a>
 
 
 
@@ -211,8 +211,7 @@
     <div class="blog" data-aos="fade-up" data-aos-duration="1500">
 
       <div class="image">
-        <img
-          src="./assets/milan.jpg" alt="Milan"> 
+        <img src="./assets/milan.jpg" alt="Milan" class="project_card_img">
       </div>
       <div class="blog_content" id="content">
 
@@ -223,7 +222,8 @@
         </div>
 
         <div class="description">
-          Milan - Where help meets need ❤ - A hub for the Users to connect with the NGOs, Charities and other orgs for a good cause !
+          Milan - Where help meets need ❤ - A hub for the Users to connect with the NGOs, Charities and other orgs for a
+          good cause !
         </div>
 
 
@@ -238,158 +238,158 @@
 
 
     <!-- Hero Area Start -->
-		<div id="hero-area" class="hero-area-bg">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
-						<div class="contents">
+    <div id="hero-area" class="hero-area-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
+            <div class="contents">
 
-							<h2 class="head-title">CodeIN Community </h2>
-							<p>CodeIN Community is the Community of more than 7,000+ Coding Enthusiasts.
-								Where we organize Events, Hackathons, and Workshops on different Technologies.
-								Also, We Share Resources, Roadmaps to learn different technologies and share
-								opportunities related to Internships and different tech programs.
+              <h2 class="head-title">CodeIN Community </h2>
+              <p>CodeIN Community is the Community of more than 7,000+ Coding Enthusiasts.
+                Where we organize Events, Hackathons, and Workshops on different Technologies.
+                Also, We Share Resources, Roadmaps to learn different technologies and share
+                opportunities related to Internships and different tech programs.
 
-							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
+              <div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
-								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
-									<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
-									Join
+                <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
+                  <img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
+                  Join
 
-									Now</i></a>
-								<a href="#about" class="btn btn-outline-danger btn-common video-popup">
-									<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
-									More</i></a>
-							</div>
+                  Now</i></a>
+                <a href="#about" class="btn btn-outline-danger btn-common video-popup">
+                  <img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
+                  More</i></a>
+              </div>
 
-							<br>Join the community on Discord for interaction with students from all over India.
-							</p>
-							<br>
+              <br>Join the community on Discord for interaction with students from all over India.
+              </p>
+              <br>
 
-						</div>
-					</div>
-					<div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
-						<div class="intro-img">
-							<img class="img-fluid" src="assets/img/intro-mobile.webp" alt="Introduction mobile picture">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Hero Area End -->
+            </div>
+          </div>
+          <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
+            <div class="intro-img">
+              <img class="img-fluid" src="assets/img/intro-mobile.webp" alt="Introduction mobile picture">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Hero Area End -->
 
 
-	</header>
-	<!-- Header Area wrapper End -->
+    </header>
+    <!-- Header Area wrapper End -->
 
-	<!-- Services Section Start -->
-	<section id="services" class="section-padding">
-		<div class="container">
-			<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-				<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Us Here</h2>
-				<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-			</div>
-			<div class="row">
-				<!-- Services item -->
-				<div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-					<div class="services-item wow fadeInRight" data-wow-delay="0.3s">
-						<div class="icon">
-							<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank">
-								<i class="fab fa-discord"></i>
-						</div>
-						<div class="services-content">
-							<h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
-							<p> Join the community on Discord for interaction with students from all over the India.
-							</p>
-							</a>
-						</div>
-					</div>
-				</div>
-				<!-- Services item -->
-				<div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-					<div class="services-item wow fadeInRight" data-wow-delay="0.6s">
-						<div class="icon">
-							<a href="https://t.me/CodeINCommunity" target="_blank">
-								<i class="fab fa-telegram"></i>
-						</div>
-						<div class="services-content">
-							<h3><a href="https://t.me/CodeINCommunity">Telegram Group</a></h3>
-							<p> Join the Telegram group for all the updates on upcoming opportunities and interaction
-								based on that.
-							</p>
-							</a>
-						</div>
-					</div>
-				</div>
-				<!-- Services item -->
-				<div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-					<div class="services-item wow fadeInRight" data-wow-delay="0.9s">
-						<div class="icon">
-							<a href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank">
-								<i class="fab fa-linkedin"></i>
-						</div>
-						<div class="services-content">
-							<h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">LinkedIn Page</a>
-							</h3>
-							<p> Follow the official page of CodeIN community where we posts about all the upcoming
-								workshops and
-								events. </p>
-							</a>
-						</div>
-					</div>
-				</div>
-				<!-- Services item -->
-				<div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-					<div class="services-item wow fadeInRight" data-wow-delay="1.2s">
-						<div class="icon">
-							<a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank">
-								<i class="fab fa-github"></i>
-						</div>
-						<div class="services-content">
-							<h3><a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website">Open Source
-									Project</a></h3>
-							<p> This is the GitHub repository of Open Source CodeIN Community Website built using HTML,
-								CSS and
-								JavaScript. </p>
-							</a>
-						</div>
-					</div>
-				</div>
-				<!-- Services item -->
-				<div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-					<div class="services-item wow fadeInRight" data-wow-delay="1.5s">
-						<div class="icon">
-							<a href="https://twitter.com/CodeinCommunity" target="_blank">
-								<i class="fab fa-twitter"></i>
-						</div>
-						<div class="services-content">
-							<h3><a href="https://twitter.com/CodeinCommunity">Twitter</a></h3>
-							<p> Follow the official Twitter Page of the CodeIN Community for the updated information.
-							</p>
-							</a>
-						</div>
-					</div>
-				</div>
-				<!-- Services item -->
-				<div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-					<div class="services-item wow fadeInRight" data-wow-delay="1.8s">
-						<div class="icon">
-							<a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank">
-								<i class="fab fa-youtube"></i>
-						</div>
-						<div class="services-content">
-							<h3><a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug">YouTube Content</a>
-							</h3>
-							<p> Subscribe to the Youtube channel for all the upcoming Webinars, Tech Events and
-								Workshops. </p>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Services Section End -->
+    <!-- Services Section Start -->
+    <section id="services" class="section-padding">
+      <div class="container">
+        <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
+          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Us Here</h2>
+          <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+        </div>
+        <div class="row">
+          <!-- Services item -->
+          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
+            <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
+              <div class="icon">
+                <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank">
+                  <i class="fab fa-discord"></i>
+              </div>
+              <div class="services-content">
+                <h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
+                <p> Join the community on Discord for interaction with students from all over the India.
+                </p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Services item -->
+          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
+            <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
+              <div class="icon">
+                <a href="https://t.me/CodeINCommunity" target="_blank">
+                  <i class="fab fa-telegram"></i>
+              </div>
+              <div class="services-content">
+                <h3><a href="https://t.me/CodeINCommunity">Telegram Group</a></h3>
+                <p> Join the Telegram group for all the updates on upcoming opportunities and interaction
+                  based on that.
+                </p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Services item -->
+          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
+            <div class="services-item wow fadeInRight" data-wow-delay="0.9s">
+              <div class="icon">
+                <a href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank">
+                  <i class="fab fa-linkedin"></i>
+              </div>
+              <div class="services-content">
+                <h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">LinkedIn Page</a>
+                </h3>
+                <p> Follow the official page of CodeIN community where we posts about all the upcoming
+                  workshops and
+                  events. </p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Services item -->
+          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
+            <div class="services-item wow fadeInRight" data-wow-delay="1.2s">
+              <div class="icon">
+                <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank">
+                  <i class="fab fa-github"></i>
+              </div>
+              <div class="services-content">
+                <h3><a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website">Open Source
+                    Project</a></h3>
+                <p> This is the GitHub repository of Open Source CodeIN Community Website built using HTML,
+                  CSS and
+                  JavaScript. </p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Services item -->
+          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
+            <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
+              <div class="icon">
+                <a href="https://twitter.com/CodeinCommunity" target="_blank">
+                  <i class="fab fa-twitter"></i>
+              </div>
+              <div class="services-content">
+                <h3><a href="https://twitter.com/CodeinCommunity">Twitter</a></h3>
+                <p> Follow the official Twitter Page of the CodeIN Community for the updated information.
+                </p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Services item -->
+          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
+            <div class="services-item wow fadeInRight" data-wow-delay="1.8s">
+              <div class="icon">
+                <a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank">
+                  <i class="fab fa-youtube"></i>
+              </div>
+              <div class="services-content">
+                <h3><a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug">YouTube Content</a>
+                </h3>
+                <p> Subscribe to the Youtube channel for all the upcoming Webinars, Tech Events and
+                  Workshops. </p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Services Section End -->
 
 
 
@@ -436,20 +436,18 @@
             </div>
 
             <div class="community_box box2" data-tilt data-tilt-scale="1.1">
-							<a href="https://www.newtonschool.co/" style="text-decoration: none;"
-								target="_blank">
-								<img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
-									alt="Azdev community image">
-							</a>
-						</div>
+              <a href="https://www.newtonschool.co/" style="text-decoration: none;" target="_blank">
+                <img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
+                  alt="Azdev community image">
+              </a>
+            </div>
 
-						<div class="community_box box2" data-tilt data-tilt-scale="1.1">
-							<a href="https://www.codingminutes.com/" style="text-decoration: none;"
-								target="_blank">
-								<img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
-									alt="Azdev community image">
-							</a>
-						</div>
+            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
+              <a href="https://www.codingminutes.com/" style="text-decoration: none;" target="_blank">
+                <img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
+                  alt="Azdev community image">
+              </a>
+            </div>
           </div>
 
         </div>
@@ -624,7 +622,9 @@
               <li><a href="#">Events</a></li>
               <li><a href="#">Hackathons</a></li>
               <li><a href="#">Open Source</a></li>
-              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer Group</a></li>
+              <li><a
+                  href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer
+                  Group</a></li>
               <li><a href="https://codeincommunity.bio.link/">Community</a></li>
             </ul>
           </div>
