--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -140,7 +140,7 @@
 
   </div>
 
-
+ 
 
   <div class="container_blog">
 
@@ -236,7 +236,15 @@
 
     </div>
 
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wAXtssM42Ao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <br>
+    <div class="description">
+      <h5>🏆 Follow our YouTube Tutorial to know all steps to Rock HacktoberFest 2022! 🥳</h5>
+    </div>
+    <a href=" https://youtu.be/wAXtssM42Ao" class="read_btn" data-aos="fade-up">Watch On YouTube</a> 
+    <a href=" https://hacktoberfest.com/" class="read_btn" data-aos="fade-up">HacktoberFest Website</a>
+  </div>
+  
     <!-- Hero Area Start -->
     <div id="hero-area" class="hero-area-bg">
       <div class="container">
