--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -127,7 +127,7 @@
     <div class="col-md-1"></div>
 
     <div class="col-md-3">
-      <div style="float: left;margin-right: 5%;" class="searchbar_div">
+      <div style="float: center; margin-right : 26%; margin-left: 5%;" class="searchbar_div">
         <input style="border-radius: 3rem; padding: 10px;border-color: grey;width: 130%;" id="searchbar"
           onkeyup="search_blog()" type="text" name="search" placeholder='Search projects.....' />
       </div>
@@ -136,7 +136,7 @@
   <br>
 
   <div class="center">
-    <img src="./assets/img/hack.jpg" class="centered_img">
+    <img src="./assets/img/hack.jpg" class="centered_img" style="max-width:100%;height:auto;">
 
   </div>
 
