--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
-								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
+								<a href="https://discord.com/servers/codein-community-831388874118660156" target="_blank" class="btn btn-common">
 									<i class="fa fa-brands fa-discord"></i>
 									Join
 
