--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -163,7 +163,7 @@
         <div class="description">
           So, here you go! Contribute to the Open Source Website of CodeIN Community 🤩 Excited?
         </div>
-        <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" class="read_btn" data-aos="fade-up">Go
+        <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank" class="read_btn" data-aos="fade-up">Go
           to Project</a>
       </div>
     </div>
@@ -193,7 +193,7 @@
           section to donate your old books.
         </div>
 
-        <a href="https://github.com/SauravMukherjee44/Aec-Library-Website" class="read_btn" data-aos="fade-up">Go to
+        <a href="https://github.com/SauravMukherjee44/Aec-Library-Website" target="_blank" class="read_btn" data-aos="fade-up">Go to
           Project</a>
 
 
@@ -229,7 +229,7 @@
 
 
 
-        <a href="https://github.com/IAmTamal/Milan" class="read_btn">Go to Project</a>
+        <a href="https://github.com/IAmTamal/Milan" target="_blank" class="read_btn">Go to Project</a>
 
 
       </div>
@@ -241,8 +241,8 @@
     <div class="description">
       <h5>🏆 Follow our YouTube Tutorial to know all steps to Rock HacktoberFest 2022! 🥳</h5>
     </div>
-    <a href=" https://youtu.be/wAXtssM42Ao" class="read_btn" data-aos="fade-up">Watch On YouTube</a> 
-    <a href=" https://hacktoberfest.com/" class="read_btn" data-aos="fade-up">HacktoberFest Website</a>
+    <a href=" https://youtu.be/wAXtssM42Ao" target="_blank" class="read_btn" data-aos="fade-up">Watch On YouTube</a> 
+    <a href=" https://hacktoberfest.com/" target="_blank" class="read_btn" data-aos="fade-up">HacktoberFest Website</a>
   </div>
   
     <!-- Hero Area Start -->
@@ -306,7 +306,7 @@
                   <i class="fab fa-discord"></i>
               </div>
               <div class="services-content">
-                <h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
+                <h3><a href="https://discord.com/invite/sqFRzrj7f3" target="_blank">Discord Server</a></h3>
                 <p> Join the community on Discord for interaction with students from all over the India.
                 </p>
                 </a>
@@ -321,7 +321,7 @@
                   <i class="fab fa-telegram"></i>
               </div>
               <div class="services-content">
-                <h3><a href="https://t.me/CodeINCommunity">Telegram Group</a></h3>
+                <h3><a href="https://t.me/CodeINCommunity" target="_blank">Telegram Group</a></h3>
                 <p> Join the Telegram group for all the updates on upcoming opportunities and interaction
                   based on that.
                 </p>
@@ -337,7 +337,7 @@
                   <i class="fab fa-linkedin"></i>
               </div>
               <div class="services-content">
-                <h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">LinkedIn Page</a>
+                <h3><a href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank">LinkedIn Page</a>
                 </h3>
                 <p> Follow the official page of CodeIN community where we posts about all the upcoming
                   workshops and
@@ -354,7 +354,7 @@
                   <i class="fab fa-github"></i>
               </div>
               <div class="services-content">
-                <h3><a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website">Open Source
+                <h3><a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank">Open Source
                     Project</a></h3>
                 <p> This is the GitHub repository of Open Source CodeIN Community Website built using HTML,
                   CSS and
@@ -371,7 +371,7 @@
                   <i class="fab fa-twitter"></i>
               </div>
               <div class="services-content">
-                <h3><a href="https://twitter.com/CodeinCommunity">Twitter</a></h3>
+                <h3><a href="https://twitter.com/CodeinCommunity" target="_blank">Twitter</a></h3>
                 <p> Follow the official Twitter Page of the CodeIN Community for the updated information.
                 </p>
                 </a>
@@ -386,7 +386,7 @@
                   <i class="fab fa-youtube"></i>
               </div>
               <div class="services-content">
-                <h3><a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug">YouTube Content</a>
+                <h3><a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank">YouTube Content</a>
                 </h3>
                 <p> Subscribe to the Youtube channel for all the upcoming Webinars, Tech Events and
                   Workshops. </p>
@@ -631,9 +631,9 @@
               <li><a href="#">Hackathons</a></li>
               <li><a href="#">Open Source</a></li>
               <li><a
-                  href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer
+                  href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform" target="_blank">Volunteer
                   Group</a></li>
-              <li><a href="https://codeincommunity.bio.link/">Community</a></li>
+              <li><a href="https://codeincommunity.bio.link/" target="_blank">Community</a></li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
@@ -641,7 +641,7 @@
             <ul class="address">
               <li>
                 <a
-                  href="https://www.google.com/maps/place/Asansol,+West+Bengal/@23.6834541,86.8541898,11z/data=!3m1!4b1!4m5!3m4!1s0x39f71f0ea1022529:0xf888f7e7fd11cefe!8m2!3d23.6888636!4d86.9660638"><i
+                  href="https://www.google.com/maps/place/Asansol,+West+Bengal/@23.6834541,86.8541898,11z/data=!3m1!4b1!4m5!3m4!1s0x39f71f0ea1022529:0xf888f7e7fd11cefe!8m2!3d23.6888636!4d86.9660638" target="_blank"><i
                     class="fas fa-map-marked-alt"></i> Location: Asansol,India-713305</a>
               </li>
               <li>
@@ -662,7 +662,7 @@
         <a href=" https://discord.com/invite/sqFRzrj7f3" target="_blank"><i class="fab fa-discord"></i></a>
       </li>
       <li>
-        <a href="https://t.me/CodeINCommunity"><i class="fab fa-telegram" target="_blank"></i></a>
+        <a href="https://t.me/CodeINCommunity" target="_blank"><i class="fab fa-telegram"></i></a>
       </li>
       <li>
         <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank"><i
