blogs,counters,hacktoberfest page

--- a/t.html
+++ b/t.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Opportunities page of CodeIN-Community-Website">
 
-  <title>CodeIN Community | Hacktoberfest 2022 </title>
+  <title>CodeIN Community | Blog Page </title>
 
 
   <!-- Bootstrap CSS -->
@@ -31,7 +31,7 @@
   <!-- Main Style -->
   <link rel="stylesheet" href="assets/css/main.css">
   <!--blog css  -->
-  <link rel="stylesheet" href="assets/css/hacktoberfest.css">
+
   <!-- Responsive Style -->
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
@@ -45,6 +45,81 @@
   <!-- animate on scroll import -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- animate on scroll import end -->
+  <style>
+ .col-md-6{
+    padding: 0;
+    max-width: 45%;
+ }   
+
+.col-md-6 img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.col-md-6 {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 1em;
+  background: #fff;
+margin: 1em auto;
+filter: drop-shadow(23px 24px 36px rgba(254, 42, 80, 0.25));
+transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+
+}
+.col-md-6:hover {
+  transform: scale(1.03);
+  transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+}
+.read_btn {
+  background-color: #f63854;
+  padding: 7px 10px;
+  border: 1px solid #f63854;
+  border-radius: 30px;
+  border: 1px dotted white;
+  color: white;
+  margin-bottom: 1rem;
+}
+
+.read_btn:hover {
+  color: #f63854;
+  border: 1px dotted #f63854;
+  background: white;
+  box-shadow: 0 6px 22px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+}
+
+.card__body {
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  margin-bottom: 1rem;
+}
+
+
+
+.card__body h4 {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+.card__footer {
+  display: flex;
+  padding: 1rem;
+  margin-top: auto;
+}
+
+
+  </style>
 </head>
 
 <body>
@@ -86,16 +161,16 @@
                 Opportunity
               </a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item active">
               <a class="nav-link" href="./blog.html">
                 Blogs
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#community_partner">
-                Sponsors
-              </a>
-            </li>
+							<a class="nav-link" href="#community_partner">
+								Sponsors
+							</a>
+						</li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">
                 Contact
@@ -119,263 +194,50 @@
     <div class="col-md-4"></div>
     <div class="col-md-4">
       <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">HacktoberFest 2022</h2><br>
-        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Projects</h2>
+        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Blogs</h2>
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       </div>
     </div>
     <div class="col-md-1"></div>
 
     <div class="col-md-3">
-      <div style="float: left;margin-right: 5%;" class="searchbar_div">
+      <div style="float: left;margin-right: 5%;">
         <input style="border-radius: 3rem; padding: 10px;border-color: grey;width: 130%;" id="searchbar"
-          onkeyup="search_blog()" type="text" name="search" placeholder='Search projects.....' />
+          onkeyup="search_blog()" type="text" name="search" placeholder='Search blogs.....' />
       </div>
     </div>
   </div>
-  <br>
 
-  <div class="center">
-    <img src="./assets/img/hack.jpg" class="centered_img">
 
-  </div>
 
- 
 
-  <div class="container mt-5">
-
-  <div class="row repos">
-    <!---1-->
+  <div class="container ">
+    <div class="row">
     <div class=" col-md-6">
       <div class="card__header">
-        <img  src="./assets/CodeIN.jpg" alt="card__image" class="card__image">
+        <img src="https://source.unsplash.com/600x400/?computer" alt="card__image" class="card__image" width="600">
       </div>
       <div class="card__body">
-        <h4>   Open Source Website for CodeIN Community built using HTML, CSS, JavaScript and Bootstrap</h4>
-        <p> So, here you go! Contribute to the Open Source Website of CodeIN Community 🤩 Excited?</p>
+        <h4>What's new in 2022 Tech</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
       </div>
     <div class="card__footer text-center">
-        <a href="https://simpleprogrammer.com/myths-about-software-programming/https://github.com/SauravMukherjee44/CodeIN-Community-Website" class="read_btn" data-aos="fade-up">Go to Project</a>
+        <a href="https://simpleprogrammer.com/iot-influence-industry/" class="read_btn" data-aos="fade-up">Go to blog</a>
     </div>
     </div>
-
-     <!---2-->
-     <div class=" col-md-6">
-      <div class="card__header">
-        <img  src="./assets/Library.png" alt="card__image" class="card__image">
+    <div class=" col-md-6">
+        <div class="card__header">
+          <img src="https://source.unsplash.com/600x400/?computer" alt="card__image" class="card__image" width="600">
+        </div>
+        <div class="card__body">
+          <h4>What's new in 2022 Tech</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+        </div>
+       
       </div>
-      <div class="card__body">
-        <h4>    Open-Source Library Website built using HTML, CSS, JavaScript and Bootstrap and APIs.</h4>
-        <p>  This is an Open-Source Library Website in which you get Resources to learn different topics, Donate book
-          section to donate your old books.</p>
-      </div>
-    <div class="card__footer text-center">
-        <a href="https://github.com/SauravMukherjee44/Aec-Library-Website" class="read_btn" data-aos="fade-up">Go to Project</a>
-    </div>
-    </div>
-
-     <!---3-->
-     <div class=" col-md-6">
-      <div class="card__header">
-        <img  src="./assets/milan.jpg" alt="card__image" class="card__image">
-      </div>
-      <div class="card__body">
-        <h4> With Milan we help users, NGOs, Clubs and charities to meet their needs.</h4>
-        <p> Milan - Where help meets need ❤ - A hub for the Users to connect with the NGOs, Charities and other orgs for a
-          good cause !</p>
-      </div>
-    <div class="card__footer text-center">
-        <a href="https://github.com/IAmTamal/Milan" class="read_btn" data-aos="fade-up">Go to Project</a>
-    </div>
-    </div>
-
-
-  </div>
-
-  <div class="yt-video mt-5"> 
     
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/wAXtssM42Ao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <br>
-    <div class="text-center mt-2">
-      <div class="description">
-        <h5>🏆 Follow our YouTube Tutorial to know all steps to Rock HacktoberFest 2022! 🥳</h5>
-      </div>
-      <div class="d-flex align-items-center justify-content-center">
-        <a href=" https://youtu.be/wAXtssM42Ao" class="read_btn" data-aos="fade-up">Watch On YouTube</a> 
-        <a href=" https://hacktoberfest.com/" class="read_btn" data-aos="fade-up">HacktoberFest Website</a>
-      </div>
-    </div>
   </div>
-
-  </div>
-  
-    <!-- Hero Area Start -->
-    <div id="hero-area" class="hero-area-bg">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
-            <div class="contents">
-
-              <h2 class="head-title">CodeIN Community </h2>
-              <p>CodeIN Community is the Community of more than 7,000+ Coding Enthusiasts.
-                Where we organize Events, Hackathons, and Workshops on different Technologies.
-                Also, We Share Resources, Roadmaps to learn different technologies and share
-                opportunities related to Internships and different tech programs.
-
-              <div class="header-button" data-aos="fade-right" data-aos-duration="2000">
-
-                <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
-                  <img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
-                  Join
-
-                  Now</i></a>
-                <a href="#about" class="btn btn-outline-danger btn-common video-popup">
-                  <img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
-                  More</i></a>
-              </div>
-
-              <br>Join the community on Discord for interaction with students from all over India.
-              </p>
-              <br>
-
-            </div>
-          </div>
-          <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
-            <div class="intro-img">
-              <img class="img-fluid" src="assets/img/intro-mobile.webp" alt="Introduction mobile picture">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Hero Area End -->
-
-
-    </header>
-    <!-- Header Area wrapper End -->
-
-    <!-- Services Section Start -->
-    <section id="services" class="section-padding">
-      <div class="container">
-        <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Join Us Here</h2>
-          <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-        </div>
-        <div class="row">
-          <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-            <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
-              <div class="icon">
-                <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank">
-                  <i class="fab fa-discord"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
-                <p> Join the community on Discord for interaction with students from all over the India.
-                </p>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-            <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
-              <div class="icon">
-                <a href="https://t.me/CodeINCommunity" target="_blank">
-                  <i class="fab fa-telegram"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="https://t.me/CodeINCommunity">Telegram Group</a></h3>
-                <p> Join the Telegram group for all the updates on upcoming opportunities and interaction
-                  based on that.
-                </p>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-            <div class="services-item wow fadeInRight" data-wow-delay="0.9s">
-              <div class="icon">
-                <a href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank">
-                  <i class="fab fa-linkedin"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">LinkedIn Page</a>
-                </h3>
-                <p> Follow the official page of CodeIN community where we posts about all the upcoming
-                  workshops and
-                  events. </p>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-            <div class="services-item wow fadeInRight" data-wow-delay="1.2s">
-              <div class="icon">
-                <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank">
-                  <i class="fab fa-github"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website">Open Source
-                    Project</a></h3>
-                <p> This is the GitHub repository of Open Source CodeIN Community Website built using HTML,
-                  CSS and
-                  JavaScript. </p>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-            <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
-              <div class="icon">
-                <a href="https://twitter.com/CodeinCommunity" target="_blank">
-                  <i class="fab fa-twitter"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="https://twitter.com/CodeinCommunity">Twitter</a></h3>
-                <p> Follow the official Twitter Page of the CodeIN Community for the updated information.
-                </p>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12" data-aos="fade-up" data-aos-duration="1500">
-            <div class="services-item wow fadeInRight" data-wow-delay="1.8s">
-              <div class="icon">
-                <a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank">
-                  <i class="fab fa-youtube"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug">YouTube Content</a>
-                </h3>
-                <p> Subscribe to the Youtube channel for all the upcoming Webinars, Tech Events and
-                  Workshops. </p>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Services Section End -->
-
-
-
-  </div>
-
-
-
-
-
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-
-
+</div>
 
   <!---- Sponsors
     ==================================== -->
@@ -408,18 +270,20 @@
             </div>
 
             <div class="community_box box2" data-tilt data-tilt-scale="1.1">
-              <a href="https://www.newtonschool.co/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
-                  alt="Azdev community image">
-              </a>
-            </div>
+							<a href="https://www.newtonschool.co/" style="text-decoration: none;"
+								target="_blank">
+								<img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
+									alt="Azdev community image">
+							</a>
+						</div>
 
-            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
-              <a href="https://www.codingminutes.com/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
-                  alt="Azdev community image">
-              </a>
-            </div>
+						<div class="community_box box2" data-tilt data-tilt-scale="1.1">
+							<a href="https://www.codingminutes.com/" style="text-decoration: none;"
+								target="_blank">
+								<img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
+									alt="Azdev community image">
+							</a>
+						</div>
           </div>
 
         </div>
@@ -594,9 +458,7 @@
               <li><a href="#">Events</a></li>
               <li><a href="#">Hackathons</a></li>
               <li><a href="#">Open Source</a></li>
-              <li><a
-                  href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer
-                  Group</a></li>
+              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer Group</a></li>
               <li><a href="https://codeincommunity.bio.link/">Community</a></li>
             </ul>
           </div>
