--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
 					the
 					digital world
 				</div>
-				<a href="https://simpleprogrammer.com/iot-influence-industry/" class="read_btn" data-aos="fade-up">
+				<a href="https://simpleprogrammer.com/iot-influence-industry/" target="_blank" class="read_btn" data-aos="fade-up">
 					Go to blog</a>
 			</div>
 		</div>
@@ -1193,7 +1193,7 @@
 					confined in
 					a specific domain but have universal adoption
 				</div>
-				<a href="https://simpleprogrammer.com/trends-ai-and-ml-2022/" class="read_btn" data-aos="fade-up">Go to
+				<a href="https://simpleprogrammer.com/trends-ai-and-ml-2022/" target="_blank" class="read_btn" data-aos="fade-up">Go to
 					blog</a>
 			</div>
 		</div>
@@ -1215,7 +1215,7 @@
 					likely
 					reason is that there are many myths surrounding coding, making it monotonous or illogical
 				</div>
-				<a href="https://simpleprogrammer.com/myths-about-software-programming/" class="read_btn">Go to blog</a>
+				<a href="https://simpleprogrammer.com/myths-about-software-programming/" target="_blank" class="read_btn">Go to blog</a>
 			</div>
 		</div>
 	</div>
